# CodeCompass

./: README.md
backend/: .env.example  .gitignore  app.py  embedchain.yaml  pyproject.toml
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  Header.jsx  RepoInput.jsx  RepoSelect.jsx  Toast.jsx
frontend/src/lib/: api.js
